# tesseract-rs

./: .commitlintrc.json  .crate-ignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  init-submodules.sh  package.json  setup-hooks.sh
.github/workflows/: commitlint.yml  rust.yml
.husky/: pre-commit
benches/: ocr_benchmark.rs
examples/: embedded_example.rs
src/: api.rs  choice_iterator.rs  embedded.rs  enums.rs  error.rs  lib.rs  monitor.rs  mutable_iterator.rs  page_iterator.rs  result_iterator.rs  result_renderer.rs
tests/: embedded_test.rs  freebsd_support_test.rs  integration_test.rs  test_api.rs  test_e2e.rs  test_iterators.rs  test_monitor.rs  test_renderer.rs
tests/common/: mod.rs
