[package]
name = "tesseract-rs"
version = "0.1.20"
edition = "2021"
authors = ["Cafer Can Gündoğdu <cafercangundogdu@gmail.com>"]
description = "Rust bindings for Tesseract OCR with optional built-in compilation"
license = "MIT"
repository = "https://github.com/cafercangundogdu/tesseract-rs"
documentation = "https://docs.rs/tesseract-rs"
readme = "README.md"
keywords = [
    "tesseract",
    "ocr",
    "bindings",
    "computer-vision",
    "text-recognition",
]
categories = ["external-ffi-bindings", "computer-vision", "text-processing"]
build = "build.rs"
links = "tesseract"
rust-version = "1.83.0"
exclude = ["tessdata/*", "third_party/*"]

[dependencies]
libc = "0.2.174"
thiserror = "1.0.69"

[dev-dependencies]
image = "0.25.6"
imageproc = "0.25.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

[build-dependencies]
cc = { version = "1.2.30", optional = true }
glob = { version = "0.3.2", optional = true }
cmake = { version = "0.1.54", optional = true }
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
zip = { version = "2.4.2", optional = true }


[features]
default = ["build-tesseract"]
build-tesseract = ["cc", "glob", "cmake", "reqwest", "zip"]

[package.metadata.docs.rs]
features = ["docs-only"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "tesseract_rs"
crate-type = ["lib"]

[[bench]]
name = "ocr_benchmark"
harness = false
